--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -37,7 +37,7 @@
         <section>
             <article>
             <h2>Past Speakers</h2>
-            <p>This year, we are excited to welcome renowned speakers from various fields, including AI, cybersecurity, and software development. Stay tuned for the full list of speakers!</p>
+            <p>This year, we are excited to welcome renowned Past Speakers from various fields, including AI, cybersecurity, and software development. Stay tuned for the full list of speakers!</p>
             <img src="C:\Users\HP\Downloads\keynote-speakers.jpg" alt="Past Speakers" width="600">
             <img src="C:\Users\HP\Downloads\Banquet Keynote.jpeg" alt="Past Speaker" width="600">
             <img src="C:\Users\HP\Downloads\CEO, Renil Komitla.jpeg" alt="Past Speaker 2" width="600">
