--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -29,9 +29,9 @@
             <caption>Detailed Schedule of Events for TechCon 2024</caption>
                 <thead>
                     <tr>
-                        <th>Time</th>
-                        <th>Session</th>
-                        <th>Speaker</th>
+                        <th scope="col">Time</th>
+                        <th scope="col">Event</th>
+                        <th scope="col">Speaker</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -53,7 +53,6 @@
                 </tbody>
             </table>
         </section>
-
         <footer>
             <p>&copy; 2024 TechCon. All rights reserved.</p>
         </footer>
