Add Regitration form

--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-    <h1>Registration for TechCon 2024</h1>
+    <h1>Register for TechCon 2024</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -30,7 +30,7 @@
             <input type="password" id="password" name="password" required><br>
             <input type="checkbox" id="terms" name="terms" required><br>
             <label for="terms">I agree to the terms and conditions</label><br><br>
-            <input type="submit" value="Register">
+            <button type="submit">Register</button>
         </form>
     </section>
     <main>
