Add contact page

--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -21,8 +21,8 @@
         <section>
             <h2>Get in Touch</h2>
             <p>If you have any questions or need further information about TechCon 2024, please feel free to reach out to us.</p>
-            <a href="mailto:email@example.com">Email</a>
-            <a href="https://www.linkedin.com/company/techcon%C2%AE-north-america-conference-exposition/?viewAsMember=true" target =blank>linkedin</a>
+            <a href="mailto:email@example.com" target="_blank">Email</a>
+            <a href="https://www.linkedin.com/company/techcon%C2%AE-north-america-conference-exposition/?viewAsMember=true" target="_blank">linkedin</a>
         <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
             <iframe 
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.0192390202216!2d-122.41941508468143!3d37.77492977975916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858064cb6e79ff%3A0xf4b421b7d2d5f2b6!2sSan%20Francisco%20City%20Hall!5e0!3m2!1sen!2sus!4v1617749741414!5m2!1sen!2sus" 
